# chimeraTreeDemo

./: .gitignore  pyproject.toml  requirements.txt
chimeraTreeDemo/: chimeraTree2D.py  chimeraTree2D_Helper.py  distanceField.py  geomHelper.py  meshBuilder.py  meshHelper.py  meshPlotUtils.py  partition.py  test2.ipynb  testChimera1.ipynb
test/: test1.ipynb  test1.py  test2.ipynb  testChimera1.ipynb  testChimera_animate.py  test_draft.py
